--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
     </section>
     <section id="pontos">
       <h2>Pontos de Medição</h2>
+
+      <input
+      type="text"
+      id="pesquisa-pontos"
+      placeholder="Pesquisar ponto de medição..."
+      style="margin-bottom: 10px; padding: 0.5em; width: 100%; max-width: 400px; border-radius: 8px; border: 1px solid #ccc;"
+    />
+    
       <ul id="pontos-list"></ul>
+
       <!-- <form id="ponto-form">
         <input type="text" id="ponto-nome" placeholder="Nome do ponto" required>
         <input type="text" id="ponto-ep" placeholder="EP" required>
@@ -41,6 +50,8 @@
           <option value="">Selecione um Setor</option>
         </select>
         <button type="submit">Adicionar Ponto</button> -->
+
+
         <button id="exportar-planilha">Exportar Pontos de Medição</button>
         <div id="modal-editar" class="modal" style="display: none;">
           <div class="modal-content">
